fix: Update tokens to use Swayable colors, fonts

--- a/src/tokens/color.yml
+++ b/src/tokens/color.yml
@@ -8,82 +8,187 @@
 #
 
 aliases:
-  vermilion:
-    value: "7, 83%"
-  ucla_gold:
-    value: "43, 100%"
-  bleu_de_france:
-    value: "210, 86%"
-  oxford_blue:
-    value: "210, 100%"
-  rich_black:
-    value: "#001123"
-  white:
-    value: "#fff"
+  # ucla_gold:
+  #   value: "43, 100%"
+  dark:
+    value: "210, 25%, 20%" # HSL value
+    rgb: "38, 51, 64" # original RGB value
+  light:
+    value: "240, 7%, 97%" # HSL value
+    rgb: "247, 247, 248" # original RGB value
+
+  primary_indigo_base:
+    value: "240, 63%" # hue & saturation
+
+  primary_indigo:
+    value: "240, 63%, 63%" # HSL value
+    rgb: "100, 100, 220" # original RGB value
+  primary_purple:
+    value: "300, 50%, 47%" # HSL value
+    rgb: "180, 60, 180" # original RGB value
+  primary_pink:
+    value: "330, 70%, 55%" # HSL value
+    rgb: "220, 60, 140" # original RGB value
+  primary_red:
+    value: "0, 63%, 63%" # HSL value
+    rgb: "220, 100, 100" # original RGB value
+  primary_orange:
+    value: "40, 72%, 51%" # HSL value
+    rgb: "220, 160, 40" # original RGB value
+  primary_yellow:
+    value: "60, 82%, 43%" # HSL value
+    rgb: "200, 200, 20" # original RGB value
+  primary_green:
+    value: "108, 48%, 59%" # HSL value
+    rgb: "120, 200, 100" # original RGB value
+  primary_cyan:
+    value: "180, 82%, 43%" # HSL value
+    rgb: "20, 200, 200" # original RGB value
+  primary_blue:
+    value: "210, 70%, 55%" # HSL value
+    rgb: "60, 140, 220" # original RGB value
+
+  secondary_purple:
+    value: "270, 52%, 55%" # HSL value
+    rgb: "140, 80, 200" # original RGB value
+  secondary_pink:
+    value: "323, 67%, 47%" # HSL value
+    rgb: "200, 40, 140" # original RGB value
+  secondary_red:
+    value: "351, 67%, 59%" # HSL value
+    rgb: "220, 80, 100" # original RGB value
+  secondary_orange:
+    value: "24, 68%, 57%" # HSL value
+    rgb: "220, 130, 70" # original RGB value
+  secondary_yellow:
+    value: "48, 83%, 47%" # HSL value
+    rgb: "220, 180, 20" # original RGB value
+  secondary_green:
+    value: "77, 56%, 51%" # HSL value
+    rgb: "160, 200, 60" # original RGB value
+  secondary_cyan:
+    value: "150, 52%, 55%" # HSL value
+    rgb: "80, 200, 140" # original RGB value
+  secondary_blue:
+    value: "200, 72%, 51%" # HSL value
+    rgb: "40, 160, 220" # original RGB value
+  secondary_indigo:
+    value: "223, 67%, 59%" # HSL value
+    rgb: "80, 120, 220" # original RGB value
+
 props:
-  color_vermilion_darker:
-    value: "hsla({!vermilion}, 33%, 1)"
-    category: color_group_1
-  color_vermilion_dark:
-    value: "hsla({!vermilion}, 43%, 1)"
-    category: color_group_1
-  color_vermilion:
-    value: "hsla({!vermilion}, 53%, 1)"
-    category: color_group_1
-  color_vermilion_light:
-    value: "hsla({!vermilion}, 63%, 1)"
-    category: color_group_1
-  color_vermilion_lighter:
-    value: "hsla({!vermilion}, 75%, 1)"
-    category: color_group_1
-
-  color_ucla_gold_darker:
-    value: "hsla({!ucla_gold}, 35%, 1)"
-    category: color_group_2
-  color_ucla_gold_dark:
-    value: "hsla({!ucla_gold}, 45%, 1)"
-    category: color_group_2
-  color_ucla_gold:
-    value: "hsla({!ucla_gold}, 52%, 1)"
-    category: color_group_2
-  color_ucla_gold_light:
-    value: "hsla({!ucla_gold}, 65%, 1)"
-    category: color_group_2
-  color_ucla_gold_lighter:
-    value: "hsla({!ucla_gold}, 75%, 1)"
-    category: color_group_2
-
-  color_bleu_de_france_darker:
-    value: "hsla({!bleu_de_france}, 34%, 1)"
-    category: color_group_3
-  color_bleu_de_france_dark:
-    value: "hsla({!bleu_de_france}, 44%, 1)"
-    category: color_group_3
-  color_bleu_de_france:
-    value: "hsla({!bleu_de_france}, 54%, 1)"
-    category: color_group_3
-  color_bleu_de_france_light:
-    value: "hsla({!bleu_de_france}, 64%, 1)"
-    category: color_group_3
-  color_bleu_de_france_lighter:
-    value: "hsla({!bleu_de_france}, 74%, 1)"
-    category: color_group_3
-
-  color_oxford_blue:
-    value: "hsla({!oxford_blue}, 15%, 1)"
-    category: color_group_4
-  color_rich_black:
-    value: "{!rich_black}"
-    category: color_group_4
+  color_brand:
+    value: "hsla({!primary_indigo}, 1)"
+    category: colors_basic
+  color_light:
+    value: "hsla({!light}, 1)"
+    category: colors_basic
+  color_dark:
+    value: "hsla({!dark}, 1)"
+    category: colors_basic
   color_white:
-    value: "{!white}"
-    category: color_group_4
-  color_silver:
-    value: "#7F8891"
-    category: color_group_4
-  color_cloud:
-    value: "#E9F3FD"
-    category: color_group_4
+    value: "hsla({!light}, 1)"
+    category: colors_basic
+  color_grey:
+    value: "hsla({!dark}, 0.6)"
+    category: colors_basic
+  color_grey_darker:
+    value: "hsla({!dark}, 0.9)"
+    category: colors_basic
+  color_grey_dark:
+    value: "hsla({!dark}, 0.75)"
+    category: colors_basic
+  color_grey_light:
+    value: "hsla({!dark}, 0.45)"
+    category: colors_basic
+  color_grey_lighter:
+    value: "hsla({!dark}, 0.3)"
+    category: colors_basic
+
+  color_primary_indigo:
+    value: "hsla({!primary_indigo}, 1)"
+    category: colors_primary
+  color_primary_indigo_darker:
+    value: "hsl({!primary_indigo_base}, 45%)"
+    category: colors_primary
+  color_primary_indigo_dark:
+    value: "hsl({!primary_indigo_base}, 55%)"
+    category: colors_primary
+  color_primary_indigo_light:
+    value: "hsl({!primary_indigo_base}, 75%)"
+    category: colors_primary
+  color_primary_indigo_lighter:
+    value: "hsl({!primary_indigo_base}, 85%)"
+    category: colors_primary
+
+  color_primary_purple:
+    value: "hsla({!primary_purple}, 1)"
+    category: colors_primary
+  color_primary_pink:
+    value: "hsla({!primary_pink}, 1)"
+    category: colors_primary
+  color_primary_red:
+    value: "hsla({!primary_red}, 1)"
+    category: colors_primary
+  color_primary_orange:
+    value: "hsla({!primary_orange}, 1)"
+    category: colors_primary
+  color_primary_yellow:
+    value: "hsla({!primary_yellow}, 1)"
+    category: colors_primary
+  color_primary_green:
+    value: "hsla({!primary_green}, 1)"
+    category: colors_primary
+  color_primary_cyan:
+    value: "hsla({!primary_cyan}, 1)"
+    category: colors_primary
+  color_primary_blue:
+    value: "hsla({!primary_blue}, 1)"
+    category: colors_primary
+
+  color_secondary_purple:
+    value: "hsla({!secondary_purple}, 1)"
+    category: colors_secondary
+  color_secondary_pink:
+    value: "hsla({!secondary_pink}, 1)"
+    category: colors_secondary
+  color_secondary_red:
+    value: "hsla({!secondary_red}, 1)"
+    category: colors_secondary
+  color_secondary_orange:
+    value: "hsla({!secondary_orange}, 1)"
+    category: colors_secondary
+  color_secondary_yellow:
+    value: "hsla({!secondary_yellow}, 1)"
+    category: colors_secondary
+  color_secondary_green:
+    value: "hsla({!secondary_green}, 1)"
+    category: colors_secondary
+  color_secondary_cyan:
+    value: "hsla({!secondary_cyan}, 1)"
+    category: colors_secondary
+  color_secondary_blue:
+    value: "hsla({!secondary_blue}, 1)"
+    category: colors_secondary
+  color_secondary_indigo:
+    value: "hsla({!secondary_indigo}, 1)"
+    category: colors_secondary
+
+  # color_ucla_gold_darker:
+  #   value: "hsla({!ucla_gold}, 35%, 1)"
+  #   category: colors_primary
+  # color_ucla_gold_dark:
+  #   value: "hsla({!ucla_gold}, 45%, 1)"
+  #   category: colors_primary
+  # color_ucla_gold:
+  #   value: "hsla({!ucla_gold}, 52%, 1)"
+  #   category: colors_primary
+  # color_ucla_gold_light:
+  #   value: "hsla({!ucla_gold}, 65%, 1)"
+  #   category: colors_primary
+  # color_ucla_gold_lighter:
+  #   value: "hsla({!ucla_gold}, 75%, 1)"
+  #   category: colors_primary
 global:
   type: color
   category: color
