--- a/src/tokens/font-size.yml
+++ b/src/tokens/font-size.yml
@@ -5,19 +5,19 @@
 
 props:
   size_xxxl:
-    value: "64px"
+    value: "3rem"
   size_xxl:
-    value: "48px"
+    value: "2.4rem"
   size_xl:
-    value: "36px"
+    value: "1.8rem"
   size_l:
-    value: "24px"
+    value: "1.4rem"
   size_m:
-    value: "16px"
+    value: "1.2rem"
   size_s:
-    value: "13px"
+    value: "1.0rem"
   size_xs:
-    value: "11px"
+    value: "0.8rem"
 global:
   type: number
   category: font-size
