--- a/package.json
+++ b/package.json
@@ -85,9 +85,13 @@
         2
       ],
       "vue/no-unused-vars": "error",
+      "comma-dangle": [
+        "error",
+        "always-multiline"
+      ],
       "quotes": [
         "error",
-        "double"
+        "single"
       ],
       "no-extra-semi": "off",
       "semi": [
@@ -116,7 +120,7 @@
     "postcss-safe-parser": "^4.0.1",
     "postcss-url": "^8.0.0",
     "tinycolor2": "^1.4.1",
-    "vue": "^2.5.17",
+    "vue": "^2.6.10",
     "vue-lodash": "^2.0.0",
     "vue-meta": "^1.5.6",
     "vue-router": "^3.0.2",
@@ -137,7 +141,8 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.6",
+    "babel-preset-env": "^1.7.0",
     "chalk": "^2.4.1",
     "codemirror": "^5.42.0",
     "compression-webpack-plugin": "^2.0.0",
@@ -178,7 +183,7 @@
     "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
     "vue-styleguidist": "^3.16.3",
-    "vue-template-compiler": "^2.5.17",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^4.26.1",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.1.2",
