--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "npm run lint --fix"
     }
   },
   "repository": {
@@ -168,8 +168,6 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "ora": "^3.0.0",
     "portfinder": "^1.0.20",
-    "prettier": "^1.15.3",
-    "pretty-quick": "^1.8.0",
     "rimraf": "^2.6.0",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^2.0.0",
