--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     }
   },
   "dependencies": {
+    "buefy": "^0.7.10",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.4.5",
     "postcss-import": "^12.0.1",
