--- a/.eslintrc
+++ b/.eslintrc
@@ -40,6 +40,11 @@
         "max": 1,
         "allowFirstLine": false
       }
+    }],
+    "vue/multiline-html-element-content-newline": ["error", {
+      "ignoreWhenEmpty": true,
+      "ignores": ["pre"],
+      "allowEmptyLines": false
     }]
   },
   "parserOptions": {
