--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "styleguide:build": "vue-styleguidist build --config ./config/docs.config.js",
     "theo": "theo ./src/tokens/tokens.yml --transform web --format map.scss,scss,raw.json,json --dest ./src/assets/tokens",
     "theo:onchange": "onchange \"./src/tokens/*.yml\" -- npm run theo",
-    "test": "npm-run-all theo unit"
+    "test": "npm-run-all theo unit",
+    "commit": "git-cz",
+    "release": "standard-version"
   },
   "husky": {
     "hooks": {
@@ -98,9 +100,11 @@
     "babel-preset-env": "^1.7.0",
     "chalk": "^2.4.1",
     "codemirror": "^5.42.0",
+    "commitizen": "^4.0.3",
     "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
+    "cz-conventional-changelog": "^3.0.2",
     "eslint": "^5.9.0",
     "eslint-plugin-compat": "^2.6.3",
     "eslint-plugin-es5": "^1.3.1",
@@ -126,11 +130,13 @@
     "postcss-loader": "^3.0.0",
     "postcss-safe-parser": "^4.0.1",
     "postcss-url": "^8.0.0",
+    "replace": "^1.1.0",
     "rimraf": "^2.6.0",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^2.0.0",
     "semver": "^5.6.0",
     "shelljs": "^0.8.3",
+    "standard-version": "^6.0.1",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.1.0",
     "theo": "^8.1.3",
@@ -160,5 +166,15 @@
     "not BlackBerry > 0",
     "not OperaMini all",
     "not OperaMobile > 0"
-  ]
+  ],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "standard-version": {
+    "scripts": {
+      "postchangelog": "replace 'https://github.com/swayable/swayable-design-system/issues/' 'https://www.pivotaltracker.com/story/show/' CHANGELOG.md"
+    }
+  }
 }
