--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "swayable-design-system",
-  "version": "3.5.7",
+  "version": "0.1.0",
   "description": "Design system for Swayable based on Vue Design System",
   "authors": [
     "viljamis <me@viljamis.com>",
-    "Tanner Welsh <tanner@swayable.com>"
+    "Tanner Welsh <tanner@swayable.com>",
+    "Josh Dean <josh@swayable.com>"
   ],
   "main": "dist/system/system.js",
   "files": [
     "dist/system"
   ],
-  "homepage": "https://swayable.com",
+  "homepage": "https://design.swayable.com",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -28,7 +29,9 @@
     "styleguide:build": "vue-styleguidist build --config ./config/docs.config.js",
     "theo": "theo ./src/tokens/tokens.yml --transform web --format map.scss,scss,raw.json,json --dest ./src/assets/tokens",
     "theo:onchange": "onchange \"./src/tokens/*.yml\" -- npm run theo",
-    "test": "npm-run-all theo unit"
+    "test": "npm-run-all theo unit",
+    "commit": "git-cz",
+    "release": "standard-version"
   },
   "husky": {
     "hooks": {
@@ -70,61 +73,13 @@
       }
     }
   },
-  "eslintConfig": {
-    "extends": [
-      "eslint:recommended",
-      "plugin:vue/essential"
-    ],
-    "env": {
-      "browser": true,
-      "node": true
-    },
-    "rules": {
-      "indent": [
-        "error",
-        2
-      ],
-      "vue/no-unused-vars": "error",
-      "comma-dangle": [
-        "error",
-        "always-multiline"
-      ],
-      "quotes": [
-        "error",
-        "single"
-      ],
-      "no-extra-semi": "off",
-      "semi": [
-        "error",
-        "never"
-      ],
-      "semi-style": [
-        "error",
-        "last"
-      ],
-      "no-console": "off"
-    },
-    "parserOptions": {
-      "sourceType": "module",
-      "ecmaVersion": 8,
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    }
-  },
   "dependencies": {
+    "buefy": "^0.7.10",
     "lodash": "^4.17.15",
-    "mini-css-extract-plugin": "^0.4.5",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-safe-parser": "^4.0.1",
-    "postcss-url": "^8.0.0",
-    "tinycolor2": "^1.4.1",
+    "tailwindcss": "^1.0.5",
     "vue": "^2.6.10",
-    "vue-lodash": "^2.0.0",
     "vue-meta": "^1.5.6",
     "vue-router": "^3.0.2",
-    "vuex": "^3.0.1",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
@@ -136,6 +91,7 @@
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/register": "^7.0.0",
+    "@fullhuman/postcss-purgecss": "^1.2.0",
     "@vue/test-utils": "^1.0.0-beta.26",
     "autoprefixer": "^9.4.0",
     "babel-core": "^7.0.0-bridge.0",
@@ -145,14 +101,16 @@
     "babel-preset-env": "^1.7.0",
     "chalk": "^2.4.1",
     "codemirror": "^5.42.0",
+    "commitizen": "^4.0.3",
     "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
+    "cz-conventional-changelog": "^3.0.2",
     "eslint": "^5.9.0",
     "eslint-plugin-compat": "^2.6.3",
     "eslint-plugin-es5": "^1.3.1",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-vue": "^4.7.1",
+    "eslint-plugin-vue": "^5.2.3",
     "file-loader": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-loader": "^0.5.5",
@@ -161,18 +119,25 @@
     "husky": "^1.2.0",
     "jest": "^24.8.0",
     "jest-serializer-vue": "^2.0.2",
+    "mini-css-extract-plugin": "^0.4.5",
     "node-notifier": "^5.3.0",
-    "node-sass": "^4.10.0",
+    "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "onchange": "^5.1.3",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "ora": "^3.0.0",
     "portfinder": "^1.0.20",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-safe-parser": "^4.0.1",
+    "postcss-url": "^8.0.0",
+    "replace": "^1.1.0",
     "rimraf": "^2.6.0",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^2.0.0",
     "semver": "^5.6.0",
     "shelljs": "^0.8.3",
+    "standard-version": "^6.0.1",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.1.0",
     "theo": "^8.1.3",
@@ -202,5 +167,15 @@
     "not BlackBerry > 0",
     "not OperaMini all",
     "not OperaMobile > 0"
-  ]
+  ],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "standard-version": {
+    "scripts": {
+      "postchangelog": "replace 'https://github.com/swayable/swayable-design-system/issues/' 'https://www.pivotaltracker.com/story/show/' CHANGELOG.md"
+    }
+  }
 }
